@@ -11,14 +11,18 @@ import event.SimEvent;
 import time.TimeEstimationModule;
 import java.util.*;
 
+/**
+ * 核心调度器 - 优化版
+ * [修复] 移除所有IDE警告，逻辑去重，代码优雅
+ */
 public class SimpleScheduler {
     private final TaskAllocator taskAllocator;
     private final TrafficController trafficController;
     private final RoutePlanner routePlanner;
-    private final TaskGenerator taskGenerator;
     private final TimeEstimationModule timeModule;
     private final PhysicsEngine physicsEngine;
     private final GridMap gridMap;
+    private final TaskGenerator taskGenerator;
 
     private final Map<String, Entity> entities = new HashMap<>();
     private final Map<String, Instruction> instructions = new HashMap<>();
@@ -36,15 +40,28 @@ public class SimpleScheduler {
         this.taskGenerator = taskGenerator;
     }
 
+    public void registerEntity(Entity entity) { entities.put(entity.getId(), entity); }
+    public void addInstruction(Instruction task) {
+        instructions.put(task.getInstructionId(), task);
+        taskAllocator.onNewTaskSubmitted(task);
+    }
+    public SimEvent getNextEvent() { return pendingEvents.poll(); }
+    public boolean hasPendingEvents() { return !pendingEvents.isEmpty(); }
+
     public void init() {
         for (Entity entity : entities.values()) {
             Instruction inst = taskAllocator.assignTask(entity);
-            if (inst != null) {
-                instructions.put(inst.getInstructionId(), inst);
-                entity.setCurrentInstructionId(inst.getInstructionId());
-                evaluateStateAndAddEvents(0, entity, inst);
-            } else {
+            if (inst == null) {
                 entity.setStatus(EntityStatus.IDLE);
+                continue;
+            }
+            bindInstruction(entity, inst);
+
+            Location target = getTargetLocation(entity, inst);
+            if (Objects.equals(entity.getCurrentLocation(), target)) {
+                handleArrivalLogic(0, entity, inst);
+            } else {
+                startMove(0, entity, target, inst);
             }
         }
         if (taskGenerator != null) {
@@ -52,240 +69,208 @@ public class SimpleScheduler {
         }
     }
 
-    private void evaluateStateAndAddEvents(long currentTime, Entity entity, Instruction inst) {
-        Location currentLoc = entity.getCurrentLocation();
-        Location targetLoc = determineTargetLocation(entity, inst);
+    // --- 业务逻辑 ---
+
+    public void handleCraneExecutionComplete(long now, String entityId, String instructionId) {
+        Entity crane = entities.get(entityId);
+        finishTask(instructionId);
+
+        Instruction nextInst = taskAllocator.assignTask(crane);
+        if (nextInst == null) {
+            crane.setStatus(EntityStatus.IDLE);
+            return;
+        }
+        bindInstruction(crane, nextInst);
+
+        Location currentLoc = crane.getCurrentLocation();
+        Location targetLoc = getTargetLocation(crane, nextInst);
 
         if (Objects.equals(currentLoc, targetLoc)) {
-            handleArrivalLogic(currentTime, entity, inst);
-        } else {
-            moveToTarget(currentTime, entity, targetLoc, inst);
-        }
-    }
-
-    private Location determineTargetLocation(Entity entity, Instruction inst) {
-        if (entity.getType() == EntityType.IT) {
-            IT it = (IT) entity;
-            if (!it.isLoaded() && inst.getType() == InstructionType.LOAD_TO_SHIP) {
-                return gridMap.getNodeLocation(inst.getOrigin());
+            Entity it = entities.get(nextInst.getTargetIT());
+            if (isEntityAtAndWaiting(it, currentLoc)) {
+                scheduleJointExecution(now, crane, it, nextInst);
             } else {
-                return gridMap.getNodeLocation(inst.getDestination());
+                crane.setStatus(EntityStatus.WAITING);
             }
+        } else {
+            startMove(now, crane, targetLoc, nextInst);
         }
-        if (entity.getType() == EntityType.QC) return gridMap.getNodeLocation(inst.getDestination());
-        if (entity.getType() == EntityType.YC) return gridMap.getNodeLocation(inst.getOrigin());
-        return entity.getCurrentLocation();
     }
 
-    // --- 事件消费逻辑 ---
+    public void handleITExecutionComplete(long now, String entityId, String instructionId) {
+        IT it = (IT) entities.get(entityId);
+        Instruction currentInst = instructions.get(instructionId);
+        boolean isTaskFullyDone = false;
 
-    public void handleQCExecutionComplete(long currentTime, String entityId, String instructionId) {
-        Entity qc = entities.get(entityId);
-        Instruction completedInst = instructions.get(instructionId);
-        if (completedInst != null) {
-            completedInst.markCompleted();
-            taskAllocator.onTaskCompleted(instructionId);
+        // [优化] 移除空 else 分支，逻辑更紧凑
+        if (currentInst.getType() == InstructionType.LOAD_TO_SHIP) {
+            if (it.isLoaded() && isAtLocation(it, gridMap.getNodeLocation(currentInst.getDestination()))) {
+                it.clearLoad();
+                isTaskFullyDone = true;
+            }
+        } else {
+            isTaskFullyDone = true;
         }
 
-        Instruction nextInst = taskAllocator.assignTask(qc);
-        if (nextInst == null) {
-            qc.setStatus(EntityStatus.IDLE);
+        if (isTaskFullyDone) {
+            finishTask(instructionId);
+            currentInst = taskAllocator.assignTask(it);
+        }
+
+        if (currentInst == null) {
+            it.setStatus(EntityStatus.IDLE);
             return;
         }
+        bindInstruction(it, currentInst);
 
-        instructions.put(nextInst.getInstructionId(), nextInst);
-        qc.setCurrentInstructionId(nextInst.getInstructionId());
-
-        Location qcLoc = qc.getCurrentLocation();
-        Location nextTarget = gridMap.getNodeLocation(nextInst.getDestination());
-
-        if (Objects.equals(qcLoc, nextTarget)) {
-            Entity it = findEntity(nextInst.getTargetIT());
-            if (checkWait(it, qcLoc)) scheduleJointExecution(currentTime, qc, it, nextInst);
-            else qc.setStatus(EntityStatus.WAITING);
-        } else {
-            moveToTarget(currentTime, qc, nextTarget, nextInst);
-        }
+        Location target = getTargetLocation(it, currentInst);
+        startMove(now, it, target, currentInst);
     }
 
-    public void handleQCArrival(long currentTime, String entityId, String instructionId, String targetPosKey) {
-        Entity qc = entities.get(entityId);
-        qc.setStatus(EntityStatus.IDLE);
+    public void handleCraneArrival(long now, String entityId, String instructionId) {
+        Entity crane = entities.get(entityId);
         Instruction inst = instructions.get(instructionId);
+        Entity it = entities.get(inst.getTargetIT());
 
-        Entity it = findEntity(inst.getTargetIT());
-        if (checkWait(it, Location.parse(targetPosKey))) scheduleJointExecution(currentTime, qc, it, inst);
-        else qc.setStatus(EntityStatus.WAITING);
-    }
-
-    public void handleYCExecutionComplete(long currentTime, String entityId, String instructionId) {
-        Entity yc = entities.get(entityId);
-        Instruction nextInst = taskAllocator.assignTask(yc);
-        if (nextInst == null) {
-            yc.setStatus(EntityStatus.IDLE);
-            return;
-        }
-
-        instructions.put(nextInst.getInstructionId(), nextInst);
-        yc.setCurrentInstructionId(nextInst.getInstructionId());
-
-        Location ycLoc = yc.getCurrentLocation();
-        Location nextTarget = gridMap.getNodeLocation(nextInst.getOrigin());
-
-        if (Objects.equals(ycLoc, nextTarget)) {
-            Entity it = findEntity(nextInst.getTargetIT());
-            if (checkWait(it, ycLoc)) scheduleJointExecution(currentTime, yc, it, nextInst);
-            else yc.setStatus(EntityStatus.WAITING);
+        if (isEntityAtAndWaiting(it, crane.getCurrentLocation())) {
+            scheduleJointExecution(now, crane, it, inst);
         } else {
-            moveToTarget(currentTime, yc, nextTarget, nextInst);
+            crane.setStatus(EntityStatus.WAITING);
         }
     }
 
-    public void handleYCArrival(long currentTime, String entityId, String instructionId, String targetPosKey) {
-        Entity yc = entities.get(entityId);
-        yc.setStatus(EntityStatus.IDLE);
-        Instruction inst = instructions.get(instructionId);
-        Entity it = findEntity(inst.getTargetIT());
-        if (checkWait(it, Location.parse(targetPosKey))) scheduleJointExecution(currentTime, yc, it, inst);
-        else yc.setStatus(EntityStatus.WAITING);
-    }
-
-    public void handleITExecutionComplete(long currentTime, String entityId, String instructionId) {
+    public void handleITArrival(long now, String entityId, String instructionId) {
         IT it = (IT) entities.get(entityId);
         Instruction inst = instructions.get(instructionId);
-        Location origin = gridMap.getNodeLocation(inst.getOrigin());
+        Location loc = it.getCurrentLocation();
+        String locType = gridMap.getLocationType(loc);
 
-        if (isAtLocation(it, origin)) {
-            it.setCurrentLoadWeight(inst.getContainerWeight());
-            moveToTarget(currentTime, it, gridMap.getNodeLocation(inst.getDestination()), inst);
+        if ("QUAY".equals(locType)) {
+            Entity qc = entities.get(inst.getTargetQC());
+            if (isEntityAtAndWaiting(qc, loc)) scheduleJointExecution(now, qc, it, inst);
+            else it.setStatus(EntityStatus.WAITING);
+        } else if ("BAY".equals(locType)) {
+            Entity yc = entities.get(inst.getTargetYC());
+            if (isEntityAtAndWaiting(yc, loc)) scheduleJointExecution(now, yc, it, inst);
+            else it.setStatus(EntityStatus.WAITING);
         } else {
-            it.clearLoad();
-            inst.markCompleted();
-            taskAllocator.onTaskCompleted(instructionId);
-
-            Instruction next = taskAllocator.assignTask(it);
-            if (next != null) {
-                instructions.put(next.getInstructionId(), next);
-                it.setCurrentInstructionId(next.getInstructionId());
-                evaluateStateAndAddEvents(currentTime, it, next);
-            } else {
-                it.setStatus(EntityStatus.IDLE);
-            }
+            it.setStatus(EntityStatus.WAITING);
         }
     }
 
-    public void handleITArrival(long currentTime, String entityId, String instructionId, String targetPosKey) {
-        Entity it = entities.get(entityId);
-        Instruction inst = instructions.get(instructionId);
-        Location loc = Location.parse(targetPosKey);
+    // --- 核心方法 ---
 
-        if (Objects.equals(loc, gridMap.getNodeLocation(inst.getDestination()))) {
-            Entity qc = findEntity(inst.getTargetQC());
-            if (checkWait(qc, loc)) scheduleJointExecution(currentTime, qc, it, inst);
-            else it.setStatus(EntityStatus.WAITING);
-        } else if (Objects.equals(loc, gridMap.getNodeLocation(inst.getOrigin()))) {
-            Entity yc = findEntity(inst.getTargetYC());
-            if (checkWait(yc, loc)) scheduleJointExecution(currentTime, yc, it, inst);
-            else it.setStatus(EntityStatus.WAITING);
-        }
-    }
-
-    // --- 辅助 ---
-
-    private boolean checkWait(Entity target, Location loc) {
-        return target != null && isAtLocation(target, loc) && target.getStatus() == EntityStatus.WAITING;
-    }
-
-    private void handleArrivalLogic(long currentTime, Entity entity, Instruction inst) {
-        if (entity.getType() == EntityType.QC) handleQCArrival(currentTime, entity.getId(), inst.getInstructionId(), entity.getCurrentPosition());
-        else if (entity.getType() == EntityType.YC) handleYCArrival(currentTime, entity.getId(), inst.getInstructionId(), entity.getCurrentPosition());
-        else if (entity.getType() == EntityType.IT) handleITArrival(currentTime, entity.getId(), inst.getInstructionId(), entity.getCurrentPosition());
-    }
-
-    private void moveToTarget(long currentTime, Entity entity, Location target, Instruction inst) {
-        entity.setStatus(EntityStatus.MOVING);
+    private void startMove(long now, Entity entity, Location target, Instruction inst) {
         List<Location> path = routePlanner.searchRoute(entity.getCurrentLocation(), target);
-
-        // 【核心修改点 1】检查路径是否为空，防止越界异常
         if (path == null || path.isEmpty()) {
-            System.err.println(">>> [警告] 寻路失败或路径为空! Entity: " + entity.getId()
-                    + " From: " + entity.getCurrentLocation() + " To: " + target);
-            // 无法移动，保持 IDLE 状态，避免程序崩溃
-            entity.setStatus(EntityStatus.IDLE);
+            handleArrivalLogic(now, entity, inst);
             return;
         }
-
+        entity.setStatus(EntityStatus.MOVING);
         entity.setRemainingPath(path);
-        processNextStep(currentTime, entity);
+        processNextMoveStep(now, entity);
     }
 
-    private void scheduleJointExecution(long currentTime, Entity crane, Entity it, Instruction inst) {
-        long duration = timeModule.estimateOperationTime(crane, inst); // 使用新接口
-
-        crane.setStatus(EntityStatus.EXECUTING);
-        it.setStatus(EntityStatus.EXECUTING);
-        long finishTime = currentTime + duration;
-
-        EventType craneEvent = (crane.getType() == EntityType.QC) ? EventType.QC_EXECUTION_COMPLETE : EventType.YC_EXECUTION_COMPLETE;
-        pendingEvents.add(new SimEvent(finishTime, craneEvent, crane.getId(), inst.getInstructionId()));
-        pendingEvents.add(new SimEvent(finishTime, EventType.IT_EXECUTION_COMPLETE, it.getId(), inst.getInstructionId()));
-    }
-
-    public void handleStepArrival(long currentTime, String entityId, String instructionId, String targetPosKey) {
-        Entity entity = entities.get(entityId);
-        if (entity == null) return;
-
-        Location targetLoc = targetPosKey != null ? Location.parse(targetPosKey) : entity.getCurrentLocation();
-        Location oldLoc = entity.getCurrentLocation();
-        if (oldLoc != null && !oldLoc.equals(targetLoc)) physicsEngine.unlockSingleResource(entityId, oldLoc);
-        entity.setCurrentLocation(targetLoc);
-        entity.popNextStep();
+    private void processNextMoveStep(long now, Entity entity) {
+        if (trafficController.checkInterruption(entity) != null) return;
 
         if (!entity.hasRemainingPath()) {
+            Location curr = entity.getCurrentLocation();
             EventType type = switch (entity.getType()) {
                 case QC -> EventType.QC_ARRIVAL;
                 case YC -> EventType.YC_ARRIVAL;
                 case IT -> EventType.IT_ARRIVAL;
             };
-            pendingEvents.add(new SimEvent(currentTime, type, entityId, instructionId, targetLoc.toKey()));
-        } else {
-            processNextStep(currentTime, entity);
-        }
-    }
-
-    private void processNextStep(long currentTime, Entity entity) {
-        Instruction interrupt = trafficController.checkInterruption(entity);
-        if (interrupt != null) return;
-
-        // 【核心修改点 2】双重保险：在获取下一步之前检查路径是否为空
-        if (!entity.hasRemainingPath()) {
+            pendingEvents.add(new SimEvent(now, type, entity.getId(), entity.getCurrentInstructionId(), curr.toKey()));
             return;
         }
 
-        Location nextLoc = entity.getRemainingPath().get(0);
-        if (physicsEngine.detectCollision(nextLoc, entity.getId())) {
-            Instruction recovery = trafficController.resolveCollision(entity, physicsEngine.getOccupier(nextLoc));
-            if (recovery != null) return;
+        // [修复] 使用 getFirst() 替代 get(0)
+        Location next = entity.getRemainingPath().getFirst();
+
+        if (physicsEngine.detectCollision(next, entity.getId())) {
+            trafficController.resolveCollision(entity, physicsEngine.getOccupier(next));
+            return;
         }
 
-        physicsEngine.lockResources(entity.getId(), Collections.singletonList(nextLoc));
-        long duration = timeModule.estimateMovementTime(entity, Collections.singletonList(nextLoc));
+        physicsEngine.lockResources(entity.getId(), Collections.singletonList(next));
+        long stepTime = timeModule.estimateMovementTime(entity, Collections.singletonList(next));
 
-        pendingEvents.add(new SimEvent(
-                currentTime + duration, EventType.MOVE_STEP,
-                entity.getId(), entity.getCurrentInstructionId(), nextLoc.toKey()
-        ));
+        pendingEvents.add(new SimEvent(now + stepTime, EventType.MOVE_STEP,
+                entity.getId(), entity.getCurrentInstructionId(), next.toKey()));
     }
 
-    public void registerEntity(Entity entity) { entities.put(entity.getId(), entity); }
-    public void addInstruction(Instruction task) { instructions.put(task.getInstructionId(), task); taskAllocator.onNewTaskSubmitted(task); }
-    public SimEvent getNextEvent() { return pendingEvents.poll(); }
-    public boolean hasPendingEvents() { return !pendingEvents.isEmpty(); }
+    private void scheduleJointExecution(long now, Entity crane, Entity it, Instruction inst) {
+        long duration = timeModule.estimateOperationTime(crane, inst);
+        crane.setStatus(EntityStatus.EXECUTING);
+        it.setStatus(EntityStatus.EXECUTING);
+
+        if (crane.getType() == EntityType.YC && inst.getType() == InstructionType.LOAD_TO_SHIP) {
+            ((IT)it).setCurrentLoadWeight(inst.getContainerWeight());
+        }
+
+        long finishTime = now + duration;
+        EventType craneEvent = (crane.getType() == EntityType.QC) ?
+                EventType.QC_EXECUTION_COMPLETE : EventType.YC_EXECUTION_COMPLETE;
+
+        pendingEvents.add(new SimEvent(finishTime, craneEvent, crane.getId(), inst.getInstructionId()));
+        pendingEvents.add(new SimEvent(finishTime, EventType.IT_EXECUTION_COMPLETE, it.getId(), inst.getInstructionId()));
+    }
+
+    // [修复] 移除了未使用的 iid 参数
+    public void handleStepArrival(long now, String eid, String posKey) {
+        Entity entity = entities.get(eid);
+        Location target = Location.parse(posKey);
+        Location old = entity.getCurrentLocation();
+
+        if (old != null && !old.equals(target)) physicsEngine.unlockSingleResource(eid, old);
+        entity.setCurrentLocation(target);
+        entity.popNextStep();
+
+        processNextMoveStep(now, entity);
+    }
+
     public void handleTaskGeneration(long now) {
         Instruction task = taskGenerator.generate(now);
-        if(task != null) addInstruction(task);
+        if (task != null) addInstruction(task);
         pendingEvents.add(new SimEvent(now + 5000, EventType.TASK_GENERATION, "SYSTEM"));
     }
-    private boolean isAtLocation(Entity e, Location loc) { return e.getCurrentLocation() != null && e.getCurrentLocation().equals(loc); }
-    private Entity findEntity(String id) { return id == null ? null : entities.get(id); }
+
+    private Location getTargetLocation(Entity e, Instruction i) {
+        if (e.getType() == EntityType.QC) return gridMap.getNodeLocation(i.getDestination());
+        if (e.getType() == EntityType.YC) return gridMap.getNodeLocation(i.getOrigin());
+        if (e.getType() == EntityType.IT) {
+            IT it = (IT)e;
+            return it.isLoaded() ? gridMap.getNodeLocation(i.getDestination())
+                    : gridMap.getNodeLocation(i.getOrigin());
+        }
+        return e.getCurrentLocation();
+    }
+
+    private void bindInstruction(Entity e, Instruction i) {
+        instructions.put(i.getInstructionId(), i);
+        e.setCurrentInstructionId(i.getInstructionId());
+    }
+
+    // [修复] 填充了方法体，不再是空代码块
+    private void finishTask(String iid) {
+        if (iid != null && instructions.containsKey(iid)) {
+            instructions.get(iid).markCompleted();
+            taskAllocator.onTaskCompleted(iid);
+        }
+    }
+
+    private boolean isEntityAtAndWaiting(Entity e, Location loc) {
+        return e != null && isAtLocation(e, loc) && e.getStatus() == EntityStatus.WAITING;
+    }
+
+    private boolean isAtLocation(Entity e, Location loc) {
+        return e.getCurrentLocation() != null && e.getCurrentLocation().equals(loc);
+    }
+
+    private void handleArrivalLogic(long now, Entity e, Instruction i) {
+        if (e.getType() == EntityType.QC) handleCraneArrival(now, e.getId(), i.getInstructionId());
+        else if (e.getType() == EntityType.YC) handleCraneArrival(now, e.getId(), i.getInstructionId());
+        else if (e.getType() == EntityType.IT) handleITArrival(now, e.getId(), i.getInstructionId());
+    }
 }
